# ChangeLog for app-backup/tob
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/tob/ChangeLog,v 1.5 2007/05/13 17:56:40 bangert Exp $

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add herd

  26 Dec 2006; Dominik Stadler <centic@gentoo.org> -tob-0.26.ebuild,
  tob-0.26-r1.ebuild:
  Stabilize 0.26-r1, remove obsolete 0.26

  05 Jul 2005; David Holm <dholm@gentoo.org> tob-0.26-r1.ebuild:
  Added to ~ppc.

  04 Jul 2005; Robin H. Johnson <robbat2@gentoo.org>
  +files/tob-0.26-nice.patch, +files/tob-0.26-no-maketemp-warn.diff,
  +files/tob-0.26-scsi-tape.diff, +metadata.xml, +tob-0.26.ebuild,
  +tob-0.26-r1.ebuild:
  Moved from app-arch/tob to app-backup/tob.

*tob-0.26-r1 (01 Mar 2005)

  01 Mar 2005; Dominik Stadler <centic@gentoo.org>
  +files/tob-0.26-nice.patch, +files/tob-0.26-scsi-tape.diff,
  +tob-0.26-r1.ebuild:
  Fix Bug 53064 and Bug 81921

*tob-0.26 (20 Mar 2004)

  20 Mar 2004; Dominik Stadler <centic@gentoo.org> tob-0.26.ebuild,
  files/tob-0.26-no-maketemp-warn.diff:
  New ebuild
