@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX tob-0.26-nice.patch 248 RMD160 661d139a5daabea5e41b844eda46af90aa681350 SHA1 b843ba9d3dbe93677b517d96144ffee9db680323 SHA256 953a0fc022715523ba4e95be99bb21f0b4037793d1ea104e6b4eb668084428cf
 AUX tob-0.26-no-maketemp-warn.diff 386 RMD160 b6fb2eeb19a785e1535f439e1176f8429db7ca43 SHA1 3ae8451daec0f7306ea1312dc5834bf55ebe8106 SHA256 3173b761fb3ee878c1954662c406207f42245f32fbd0e5faa02a6fe57ba41405
 AUX tob-0.26-scsi-tape.diff 407 RMD160 af24d11be8a5bbf6386ac60befe1074e48a8f91b SHA1 c91effb7e1bbacac1ea0cbcec5f5717c3f2dafc7 SHA256 9374c986a015a111030ac31148552de9e382abfdc74cbacd0eb601712a75a312
 DIST tob-0.26.tgz 107711 RMD160 9f90bbbaa8ce5f54495b8f6f3c106c54cb984ce8 SHA1 a6d9639d01ce9738ab8499b3060317e558d8333d SHA256 d05af81cc4316b7e34660d78c0dad7f7a917434e7822b6ce6c156d8c11cd25e7
 EBUILD tob-0.26-r1.ebuild 1107 RMD160 cd15a1174749a470c8dcbf7b9eb16d363608c747 SHA1 aec3ae6451b62d79b20068f112603c2e10cd2eaa SHA256 d37069fa23b313b717fa317327bfb179b99bdb6428150657aa227c25cf2fe503
-MISC ChangeLog 1095 RMD160 ab18ff00d1fdbe858e80400adb4b17871ce0bb90 SHA1 e4ea21c3ec16f9468cd054c02943931a356c2bdb SHA256 fc14441635af79f6bc8bee902cf0e51f6209824d6afb555cb19f6fb76d06df5c
-MISC metadata.xml 253 RMD160 0cd01c4343823e36f3c9c789581a852cdcbe681c SHA1 cb73dff13edb196ce55af76f44975f6623420563 SHA256 034ab34443202ebc511ba59b753ec32fb42c04c22ed8094e1ab183d7e8ef09e7
+MISC ChangeLog 1264 RMD160 48a815d4522743950febe013a91abda641001034 SHA1 e7c7f1c832d4ee6fb3c2264fc5459a6d20f67cc0 SHA256 e8c398a889d1bdb5289850e191d77019cba9da1b3cbd3b682847e30dd847ca84
+MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkg9rzMACgkQyuNVb5qfaOZNugCeJyo8MLu3mpqbIcrRSDQvRMbH
+ZsoAoIRWIecPxcbpAl/iskv7lkyb7R/m
+=htlE
+-----END PGP SIGNATURE-----
