@@ -1,6 +1,10 @@
 # ChangeLog for app-backup/tob
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/tob/ChangeLog,v 1.5 2007/05/13 17:56:40 bangert Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/tob/ChangeLog,v 1.6 2008/05/28 19:14:54 phreak Exp $
+
+  28 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Dominik Stadler (centic) from metadata.xml (as per #40994).
+  Assigning to maintainer-needed.
 
   13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add herd
